06_pern-cachingindex-app-k8ss/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: gcr.io/pern-cachingindex-project/cachingindex-app:latest
          ports:
            - containerPort: 3000
